# NoteLabETL

./: .env.template  .gitignore  README.md  app.py  config.json  generate_readme.py  pyproject.toml  requirements.txt  server.py  setup.py  setup_env.sh
.github/workflows/: readme-update.yml
.streamlit/: config.toml
dashboard/: Home.py  config.py
dashboard/pages/: Tables.py
database/: database
src/: app_config.json  app_config.py  init.py  main.py
src/app/: main.py
src/app/api/: genius_api.py  spotify_api.py  sqlite_api.py
src/app/routes/: sqlite.py  swagger.py
src/app/utils/: async_request_handler.py  http_errors.py  request_handler.py
src/dashboard/: Home.py  config.py  message_handler.py  request_handler.py  streamlit_app.py
src/dashboard/.streamlit/: config.toml
src/dashboard/Pages/Main/: API Documentation.py  Dashboard.py
src/dashboard/Pages/Table/: Tables.py  create.py  edit.py
src/dashboard/pages/: API.py  Tables.py
src/database/: database
src/server/: server.py
src/server/api/: sqlite_api.py
src/server/templates/: index.html
src/utils/: classifier.py  pandas_to_sql.py  song_querifier.py  sqlite_loader.py
src/utils/api/: genius_api.py
templates/: index.html
utils/: querify.py  sqlite_loader.py
utils/api/: genius_api.py  spotify_api.py
