[project]
name = "NoteLab"
version = "0.1.1"
description = "NoteLab, WIP Streamlit + Flask + SQLite Project"
authors = [
    { name = "Sara Garcia", email = "saragarcia6123@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
license = { text = "MIT" }

dependencies = [
    "python-dotenv",
    "streamlit",
    "streamlit-cookies-manager",
    "flask",
    "flask-restx",
    "dicttoxml",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "requests",
    "aiohttp",
    "beautifulsoup4",
    "spacy",
    "transformers",
    "torch",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
