[tool.poetry]
name = "NoteLab"
version = "0.1.2"
description = "Work-in-progress SQLite + Flask + Streamlit Dashboard for Data analysis and API interaction"
authors = ["saragarcia6123 <saragarcia6123@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
streamlit = "^1.40.2"
Flask = "^3.1.0"
flask-restx = "^1.3.0"
streamlit-cookies-manager = "^0.2.0"
numpy = "^2.1.3"
toml = "^0.10.2"
pandas = "^2.2.3"
requests = "^2.32.3"
matplotlib = "^3.9.2"
aiohttp = "^3.11.8"
torch = "^2.5.1"
transformers = "^4.46.3"
kaggle = "^1.6.17"
beautifulsoup4 = "^4.12.3"
poetry = "^1.8.4"
seaborn = "^0.13.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
